--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-vercel-proxy",
   "version": "1.0.0",
   "dependencies": {
-    "puppeteer": "^21.3.8"
+    "puppeteer-core": "^21.3.8",
+    "chrome-aws-lambda": "^19.0.1"
   }
 }
