--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "dependencies": {
     "puppeteer-core": "^21.3.8",
-    "chrome-aws-lambda": "^19.0.1"
+    "chrome-aws-lambda": "^10.1.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
