--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "my-vercel-proxy",
   "version": "1.0.0",
   "dependencies": {
-    "puppeteer-core": "^22.12.0",
-    "chrome-aws-lambda": "^10.1.0"
+    "puppeteer-core": "10.1.0",
+    "chrome-aws-lambda": "10.1.0"
   },
   "engines": {
     "node": "22.x"
