--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
-  "name": "my-vercel-proxy",
-  "version": "1.0.0",
   "dependencies": {
-    "puppeteer-core": "10.1.0",
-    "chrome-aws-lambda": "10.1.0"
-  },
-  "engines": {
-    "node": "22.x"
+    "puppeteer-core": "^22.0.0",
+    "chrome-aws-lambda": "^10.1.0"
   }
 }
