--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+  "name": "my-vercel-proxy",
+  "version": "1.0.0",
   "dependencies": {
-    "puppeteer-core": "^22.0.0",
+    "puppeteer-core": "^10.1.0",
     "chrome-aws-lambda": "^10.1.0"
   }
 }
